fix z-index loader

--- a/css/style.css
+++ b/css/style.css
@@ -189,19 +189,17 @@ a {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: 0;
+  z-index: 999;
   top: 0;
   left: 0;
   transition: opacity 6s ease-in-out, visibility ease-in-out;
   visibility: hidden;
-  opacity: 0;
   filter: brightness(1.2);
   animation: opacity 5s ease-in-out;
 }
 @keyframes opacity {
   0% {
     opacity: 1;
-    z-index: 999;
     visibility: visible;
   }
   90% {
