--- a/sass/layout/_loader.scss
+++ b/sass/layout/_loader.scss
@@ -11,13 +11,13 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 0;
+    z-index: 999;
     top: 0;
     left: 0;
+    
     //property loader
     transition: opacity 6s ease-in-out, visibility ease-in-out;
     visibility: hidden;
-    opacity: 0;
     filter: brightness(1.2);
     animation: opacity 5s ease-in-out ;
 
@@ -25,7 +25,6 @@
     @keyframes opacity{
         0%{
             opacity: 1;
-            z-index: 999; 
             visibility: visible;
         }
         90%{
